portfolio of resume

--- a/02/resume/index.html
+++ b/02/resume/index.html
@@ -11,9 +11,8 @@
 		<a href="portfolio.html">Portfolio</a>
 	</nav>
 	<h1>Kathryn Taber</h1>
-
 	<hr/>
-	<img src="https://www.velo-city2017.com/media/1531/00-profile-icon.png" alt="Kathryn Tabers Headshot">
+	<img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/fr/cp0/e15/q65/15698318_10101465549394512_4258028200736927529_n.jpg?efg=eyJpIjoidCJ9&oh=916d8bc9565da61f9f4413f3a2be5bb3&oe=5A4065E4" alt="Kathryn Tabers Headshot">
 	<h2>
 		I enjoy life as a new developer
 	</h2>
