Homework class 3 Day 1 Work part 2

--- a/03/Homework/index.html
+++ b/03/Homework/index.html
@@ -34,7 +34,9 @@
       
       <div>
         <blockquote>
-          “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” - Amanda, Intuit
+          “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” 
+          <block> </block>
+          <cite> - Amanda, Intuit</cite>
         </blockquote>
       </div>
 
