--- a/03/Homework/index.html
+++ b/03/Homework/index.html
@@ -34,9 +34,7 @@
       
       <div>
         <blockquote>
-          “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” 
-          <block> </block>
-          <cite> - Amanda, Intuit</cite>
+          “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” <cite> - Amanda, Intuit</cite>
         </blockquote>
       </div>
 
