--- a/03/Magazine/index.html
+++ b/03/Magazine/index.html
@@ -2,36 +2,52 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Magazine</title>
+	<title>Magazine Layout</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-	<h1>This is a Magazine Layout</h1>
+	<header>
+		<h1 id="logo"></h1>
+		<nav>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</nav>
+	</header>
 
-	<div>
-	<header></header><nav class="one"></nav><nav class="two"></nav><nav class="three"></nav><nav class="four"></nav><nav class="five"></nav>
-	</div>
+	<div id="columnwrapper">
+		<aside id="mainsidebar"></aside>
+		<section id="sectionwrapper">
+			<div id="row1"></div>
+
+			<div id="row2">
+				<section class="left"></section>
+
+				<aside class="right"></aside>
+
+			</div>
+			<div id="row3">
+				<div class="col1"></div>
+				<div class="col2"></div>
+				<div class="col3"></div>
+				<div class="col4"></div>
+			</div>
+
+
+		</section>
 	
-	<div id="content">
-	<aside></aside>
-	<section></section>
+
 	</div>
 
-	<div id="flex">
-		<section class="left"></section>
-		<section class="middle"></section>
-		<section class="right"></section>
-	</div>
+
+
+
 	<footer></footer>
-
-
-
-
-
-
-
-
 	
 </body>
 </html>
