--- a/03/Homework/index.html
+++ b/03/Homework/index.html
@@ -19,38 +19,43 @@
 				<h1>Relaxr</h1>
 			</header>
 			<h2>Get piece of mind with a single tap</h2>
-			<h3>Get it Now</h3>
+			<ul> Get it Now</ul>
+		</div>
 
-			<div>
-				<h4>Benefits</h4>
-				<h5>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</h5>
-				<ul>
-					<li> • Schedule meetings for you</li>
-					<li> • Excel automation to complete your work for you</li>
-					<li> • Responds to emails on your behalf</li>
-					<li> • Does all your work for you with our revolutionary AI technology</li>
+		<div id="benefits">
+			<h3>Benefits</h3>
+			<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+				<ul class="bullets">
+					<li>Schedule meetings for you</li>
+					<li>Excel automation to complete your work for you</li>
+					<li> Responds to emails on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
 				</ul>
 		  </div>
       
-      <div>
-        <blockquote>
-          “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” <cite> - Amanda, Intuit</cite>
-        </blockquote>
-      </div>
+      	<div id="quote">
+        	<blockquote>
+          	“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” 
+        	</blockquote>
+        	<cite> - Amanda, Intuit</cite>
+      	</div>
 
-      <div>
-        <h6>Sign Up Now!</h6>
-      </div>
+      	<div id="signup">
+      		<p>Sign Up Now!</p>
+      	</div>
       
-      <div>
-        <p>Relaxr</p> 
+      	<div id="end">
+        	<p>Relaxr</p> 
+			<img src="https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/twitter.png?raw=true">
 
-        <footer>
-          Copyright 2015.Relaxr.
-        </footer>
-      </div>
+			<img src="https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/facebook.png?raw=true">
+			
 
-		</div>
+        	<footer>
+          	Copyright 2015.Relaxr.
+        	</footer>
+      	</div>
+
 		
 	</body>
 </html>
