--- a/03/Homework/index.html
+++ b/03/Homework/index.html
@@ -46,10 +46,11 @@
       
       	<div id="end">
         	<p>Relaxr</p> 
-			<img src="https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/twitter.png?raw=true">
+			<div class="socialmedia">
+				<img src="https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/twitter.png?raw=true">
 
-			<img src="https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/facebook.png?raw=true">
-			
+				<img src="https://github.com/WyleshaRachell/GA-FEWD/blob/master/Week_02_Styling/Assignment/starter_code/images/facebook.png?raw=true">
+			</div>
 
         	<footer>
           	Copyright 2015.Relaxr.
