final relaxr second webpage

--- a/04/Assignment/starter_code/index.html
+++ b/04/Assignment/starter_code/index.html
@@ -42,36 +42,26 @@
 				<p>
 					Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.
 				</p>
-				<h3>Learn More</h3>
+				<h3 class="learn">Learn More</h3>
 				<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/ad-unit.png">
-				</aside>
-			<h2> How I implemented Relaxr in 2 weeks and changed my life.
-			</h2> 
-			<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/blog_photo1.jpg">
-			<p>
-				<!-- I dont have the words for this section yet.  -->
-
-
-
-
-
-
-
-			</p>
-			<h3>Read More ></h3>
-			<br/><br>
-			<h2>
+			</aside>
+			<section>
+				<h2> How I implemented Relaxr in 2 weeks and changed my life.
+				</h2> 
+				<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/blog_photo1.jpg">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl. Macecenas quis auctor dui. Ut porta aliquam lorem. at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, ruttum porttitor odio. Phasellus faucibus tristique orici eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.
+				</p>
+				<h3 class="more">Read More ></h3>
+				<h2>
 				I traveled across the globe thanks to Relaxr’s Excel automation.
-			</h2>
-			<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/blog_photo2.jpg">
-			<p>
-			<!-- 	I don't have the words for this section yet -->
-
-
-
-				
-			</p>
-			<h3>Read More ></h3>
+				</h2>
+				<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/blog_photo2.jpg">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl. Macecenas quis auctor dui. Ut porta aliquam lorem. at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, ruttum porttitor odio. Phasellus faucibus tristique orici eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.
+				</p>
+				<h3 class="more2">Read More ></h3>
+			</section>
 		</div>
 		
 		<div id="signup">
