hmwk4 images pushed/fix

--- a/04/Assignment/starter_code/index.html
+++ b/04/Assignment/starter_code/index.html
@@ -49,7 +49,8 @@
 			<section>
 				<h2> How I implemented Relaxr in 2 weeks and changed my life.
 				</h2> 
-				<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/blog_photo1.jpg">
+				<img src="./images/blog_photo1.jpg">
+				
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl. Macecenas quis auctor dui. Ut porta aliquam lorem. at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, ruttum porttitor odio. Phasellus faucibus tristique orici eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.
 				</p>
@@ -57,7 +58,7 @@
 				<h2>
 				I traveled across the globe thanks to Relaxr’s Excel automation.
 				</h2>
-				<img src="file:///Users/katietaber/Sites/KathrynTaber/04/Assignment/starter_code/images/blog_photo2.jpg">
+				<img src="./images/blog_photo2.jpg">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl. Macecenas quis auctor dui. Ut porta aliquam lorem. at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, ruttum porttitor odio. Phasellus faucibus tristique orici eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.
 				</p>
