Final Project Front page

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -9,25 +9,28 @@
 
 </head>
 <body>
-	<div>
+	<div id="intro">
 		<header>
-			<h1>VeganLife</h1>
-			<nav class="HomeBar">
+			<h1>Veg Out
+				<nav class="HomeBar">
 				<ul>
 					<li>Home</li>
 					<li>About</li>
 					<li>Contact</li>
 				</ul>
-			</nav>
-
+				</nav>
+				<p>... A blog of sorts</p>
+			</h1>
 		</header>
 
-		<section>
-			<h2>We Are</h2>
+		<section id="blurb">
+			<h2>We Are
 				<p></p>
-			<input type="" name="email address">
-			<button>Join</button>
-
+				<div class="join">
+					<input type="email" name="email address">
+					<button>Join</button>
+				</div>
+			</h2>
 		</section>
 
 		<div id="categories">
@@ -50,7 +53,7 @@
 		</div>
 
 		<footer>
-			
+			2017.Veg Out a blog of sorts. Made in Atlanta.
 
 		</footer>
 
