--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -11,42 +11,65 @@
 <body>
 	<div id="intro">
 		<header>
-			<h1>Veg Out
-				<nav class="HomeBar">
+			<h1>Veg Out 
+			<nav class="HomeBar">
 				<ul>
 					<li>Home</li>
 					<li>About</li>
 					<li>Contact</li>
 				</ul>
-				</nav>
+			</nav>
+			<div class="hamburgerMenu">
+				<hr>
+				<hr>
+				<hr>
+			</div>
 				<p>... A blog of sorts</p>
 			</h1>
 		</header>
 
 		<section id="blurb">
-			<h2>We Are
-				<p></p>
+			<h2>We Are...
+				<p>Your simple low-key blog to gain information and inspiration to live a vegan life-style. If you've been vegan for 10 years, or are just dipping your toes in, we are here for your help and leissure</p>
 				<div class="join">
-					<input type="email" name="email address">
-					<button>Join</button>
+					<form>
+						<input type="text" id="email" placeholder="Email Address">
+						<input type="submit" value="Join" id="submit">
+					</form>
 				</div>
 			</h2>
 		</section>
 
-		<div id="categories">
+		<div id="cat">
 			<div class="recipes">
 				<h2>Recipes</h2>
-					<p></p>
+					<ul>
+						<li>Breakfast</li>
+						<li>Lunch</li>
+						<li>Dinner</li>
+						<li>Desserts</li>
+						<li>Snacks</li>	
+					</ul>
 					<link rel="stylesheet" type="readmore" href="">
 			</div>
+			
 			<div class="restaurants">
 				<h2>Restaurants</h2>
-					<p></p>
+					<ul>
+						<li>Quick Bites</li>
+						<li>Fancy</li>
+						<li>Sugar Stops</li>
+						<li>My Favorites</li>
+					</ul>
 					<link rel="stylesheet" type="readmore" href="">
 			</div>
+			
 			<div class="goods">
 				<h2>Consumer Goods</h2>
-					<p></p>
+					<ul>
+						<li>Retailers</li>
+						<li>Home Goods</li>
+					</ul>
 					<link rel="stylesheet" type="readmore" href="">
 			</div>
 			
