Contact page final project

--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -15,8 +15,8 @@
 			<nav class="HomeBar">
 				<ul>
 					<li>Home</li>
-					<li>About</li>
-					<li>Contact</li>
+					<li><a href="about_page/index.html">About</a></li>
+					<li><a href="contact_page/index.html">Contact</a></li>
 				</ul>
 			</nav>
 			<div class="hamburgerMenu">
@@ -29,7 +29,7 @@
 		</header>
 
 		<section id="blurb">
-			<h2>We Are...
+			<h2 class="one">We Are...
 				<p>Your simple low-key blog to gain information and inspiration to live a vegan life-style. If you've been vegan for 10 years, or are just dipping your toes in, we are here for your help and leissure</p>
 				<div class="join">
 					<form>
