final project about page

--- a/Final_Project/about_page/index.html
+++ b/Final_Project/about_page/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About</title>
 
-	<link rel="stylesheet" href="css/style.css">
+
 	<link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
@@ -12,12 +13,13 @@
 	<div>
 		<h1>Getting To Know Veg Out and The Creator</h1>
 
-		<p id="intro">Hi anyone and everyone!!Welcome to Veg Out... A Blog of Some Sorts, I'm Katie! The inventor, designer, developer, and mastermind behind this blog</p>
+		<p id="intro">Hi anyone and everyone!!Welcome to Veg Out... A Blog of Some Sorts, <span>I'm Katie!</span> The inventor, designer, developer, and mastermind</p>
+		<img src="img/me.jpeg">
 	</div>
 
-	<div>
-		<h3>What made me pursue this vision?</h3>
-		<p id="background"> I was one of those people who thought being vegan was never possible, until it WAS! It has now been over a year and I am 100% invested and here's why:
+	<div id="background">
+		<h3>What made me pursue this vision?(click me)</h3>
+		<p class="background"> I was one of those people who thought being vegan was never possible, until it <span id="was">WAS!</span> It has now been over a year and I am <span id="one">100%</span> invested and here's why:
 			<ul>
 				<li>My health has improved</li>
 				<li>Animals lives are important</li>
@@ -27,16 +29,18 @@
 		</p>
 	</div>
 
-	<div>
-		<h3>Why This Blog Matters</h3>
-		<p>This blog is designed for people to find vegan essentials without the headache. Easy, simple, and fast. Whether you are sick of making the same meals, restaurants are not idnetifying online as having options, or it's difficult to find cruelty free products... this blog is your answer!!</p>
+	<div id="matters">
+		<h3 class ="matters">Why This Blog Matters (click me)</h3>
+		<p id="why">This blog is designed for people to find vegan essentials without the headache. Easy, simple, and fast. Whether you are sick of making the same meals, restaurants are not idnetifying online as having options, or it's difficult to find cruelty free products... this blog is your answer!!</p>
 
-		<p>I do all the research so it's right at your fingertips!</p>	
+		<p id="research">I do all the research so it's right at your fingertips!</p>	
 	</div>
 
 	<footer>Please feel free to contact me anytime to help improve Veg Out</footer>
 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+	<script src="js/index3.js"></script>
 </body>
 </html>
