final project contact page

--- a/Final_Project/contact_page/index.html
+++ b/Final_Project/contact_page/index.html
@@ -82,7 +82,7 @@
 	</form>
 </body>
 	<footer>The Best Life is Cruelty Free... Thanks for Veggin' out with us!!! 
-		<div> <img src="images/veggie_icons.jpg">
+		<div> <img src="contact_page/images/veggie_icons.jpg">
 		</div>  
 	</footer>
 
