--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>VeganLife</title>
-
+	
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/mobile.css">
+
 
 </head>
 <body>
@@ -14,8 +17,7 @@
 			<h1>Veg Out 
 			<nav class="HomeBar">
 				<ul>
-					<li>Home</li>
-					<li><a href="about_page/index.html">About</a></li>
+					<li class="about"><a href="about_page/index.html">About</a></li>
 					<li><a href="contact_page/index.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -29,7 +31,7 @@
 		</header>
 
 		<section id="blurb">
-			<h2 class="one">We Are...
+			<h2 class="one">We Are...</h2>
 				<p>Your simple low-key blog to gain information and inspiration to live a vegan life-style. If you've been vegan for 10 years, or are just dipping your toes in, we are here for your help and leissure</p>
 				<div class="join">
 					<form>
@@ -37,12 +39,12 @@
 						<input type="submit" value="Join" id="submit">
 					</form>
 				</div>
-			</h2>
+			<!-- </h2> -->
 		</section>
 
 		<div id="cat">
 			<div class="recipes">
-				<h2>Recipes</h2>
+				<h2><a class="boxLinks" href="recipes/index.html">Recipes</a></h2>
 					<ul>
 						<li>Breakfast</li>
 						<li>Lunch</li>
@@ -54,7 +56,7 @@
 			</div>
 			
 			<div class="restaurants">
-				<h2>Restaurants</h2>
+				<h2><a class="boxLinks" href="restaurants/index.html">Restaurants</a></h2>
 					<ul>
 						<li>Quick Bites</li>
 						<li>Fancy</li>
@@ -65,7 +67,7 @@
 			</div>
 			
 			<div class="goods">
-				<h2>Consumer Goods</h2>
+				<h2><a class="boxLinks" href="goods/index.html">Consumer Goods</a></h2>
 					<ul>
 						<li>Retailers</li>
 						<li>Home Goods</li>
