--- a/Final_Project/about_page/index.html
+++ b/Final_Project/about_page/index.html
@@ -11,7 +11,13 @@
 <body>
 	
 	<div>
-		<h1>Getting To Know Veg Out and The Creator</h1>
+		<h1>Getting To Know Veg Out and The Creator
+			<nav class="homeBar">
+				<ul>
+					<li class="home"><a href="file:///Users/katietaber/Sites/KathrynTaber/Final_Project/index.html">Home</a></li>
+				</ul>
+			</nav>
+		</h1>
 
 		<p id="intro">Hi anyone and everyone!!Welcome to Veg Out... A Blog of Some Sorts, <span>I'm Katie!</span> The inventor, designer, developer, and mastermind</p>
 		<img src="img/me.jpeg">
