Contact page complete

--- a/Final_Project/contact_page/index.html
+++ b/Final_Project/contact_page/index.html
@@ -11,13 +11,19 @@
 </head>
 <body>
 	
-	<h1>Send Us A Message</h1>
+	<h1>Send Us A Message
+		<nav class="homeBar">
+			<ul>
+				<li class="home"><a href="file:///Users/katietaber/Sites/KathrynTaber/Final_Project/index.html">Home</a></li>
+			</ul>
+		</nav>
+
+	</h1>
 	<p>Usually responds within 24hrs</p>
 
 	<form action="#" method="POST" id="info">
 		
 		<div>
-			<!-- <label for="name">Name</label> -->
 			<h3 id="name">Name*</h3>
 		</div>
 		<div>
@@ -26,7 +32,6 @@
 		</div>
 
 		<div>
-			<!-- <label for="email">Email</label> -->
 			<h3>Email*</h3>
 		</div>
 		<div>
@@ -35,7 +40,6 @@
 		</div>
 
 		<div>
-			<!-- <label for="hearAboutUs">How Did You Hear About Us?</label> -->
 			<h3>How Did You Hear About Us?</h3>
 		</div>
 		<div>
@@ -44,7 +48,6 @@
 		</div>
 
 		<div>
-			<!-- <label for="joinEmailList">Did You Join Our Email List?</label> -->
 			<h3>Did You Join Our Email List?</h3>
 		</div>
 		<div id="list">
@@ -55,7 +58,6 @@
 		</div>
 
 		<div>
-			<!-- <label for="choices">What Intrested You The Most On Our Website?</label> -->
 			<h3>What Intrested You The Most On Our Website?</h3>
 		</div>
 		<div>
@@ -67,7 +69,6 @@
 		</div>
 
 		<div>
-			<!-- <label id="words"for="comments">Comments/Suggestions</label> -->
 			<h3>Comments/Suggestions</h3>
 		</div>
 		<div>	
@@ -82,12 +83,12 @@
 	</form>
 </body>
 	<footer>The Best Life is Cruelty Free... Thanks for Veggin' out with us!!! 
-		<div> <img src="contact_page/images/veggie_icons.jpg">
+		<div> <img src="images/veggie_icons.jpg">
 		</div>  
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-	<script src="js/index2.js"></script>
+	<script src="js/index.js"></script>
 
 </html>
