goods update final project

--- a/Final_Project/goods/index.html
+++ b/Final_Project/goods/index.html
@@ -9,39 +9,44 @@
 	<link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
-	<h1>Consumer Goods</h1>
+	<h1>Consumer Goods
+		<nav class="homeBar">
+			<ul>
+				<li class="home"><a href="file:///Users/katietaber/Sites/KathrynTaber/Final_Project/index.html">Home</a></li>
+			</ul>
+		</nav>
+	</h1>
 	<div>
 		<p>"Clothing...Bags...Makeup...Cleaning Products... You can have everything you want and still live a cruelty free life style."</p>
 	</div>
 	<section>
-		<h4>Click to see all the possible options that are available both in stores and online</h4>
+		<h4> *Click to see all the possible options that are available both in stores and online: </h4>
+	</section>
+
+	<div id="pictures">
+			<img id="image" src="images/detergents.jpeg">
+			<div></div>
+			<div id="buttons-wrapper">
+				<form>
+					<input type="button" id="prevButton" class="btn" value="Back">
+					<input type="button" id="nextButton" class="btn" value="Next">
+					</form>
+			</div>
+	</div>
+	<section>
 		<ol>
+			<li>Several Detergent Brands</li>
 			<li>Free People Clothing</li>
 			<li>Good Guys Don't Wear Leather Clothing</li>
 			<li>Kat Von D Makeup</li>
 			<li>Lush Cosmetics</li>
 			<li>Matt and Nat Accessories</li>
 			<li>Meyer's Cleaning Solutions</li>
-			<li>Obsessive COmpulsive Cosmetics</li>
+			<li>Obsessive Compulsive Cosmetics</li>
 			<li>Tom's of Maine Products</li>
 			<li>Tom's Shoes</li>
-			<li>Several Detergent Brands</li>
 		</ol>
 	</section>
-
-	<div id="pictures">
-				<img id="image" src="images/detergents.jpg">
-				<div></div>
-				<div id="buttons-wrapper">
-					<form>
-						<input type="button" id="prevButton" class="btn" value="Back">
-						<input type="button" id="nextButton" class="btn" value="Next">
-					</form>
-				</div>
-			</div>
-
-
-
 
 
 
