first page index update

--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -15,7 +15,7 @@
 	<div id="intro">
 		<header>
 			<h1>Veg Out 
-			<nav class="HomeBar">
+			<nav class="homeBar">
 				<ul>
 					<li class="about"><a href="about_page/index.html">About</a></li>
 					<li><a href="contact_page/index.html">Contact</a></li>
@@ -39,7 +39,6 @@
 						<input type="submit" value="Join" id="submit">
 					</form>
 				</div>
-			<!-- </h2> -->
 		</section>
 
 		<div id="cat">
@@ -72,7 +71,7 @@
 						<li>Retailers</li>
 						<li>Home Goods</li>
 					</ul>
-					<link rel="stylesheet" type="readmore" href="">
+					<!-- <link rel="stylesheet" type="readmore" href=""> -->
 			</div>
 			
 		</div>
