recipes final project update

--- a/Final_Project/recipes/index.html
+++ b/Final_Project/recipes/index.html
@@ -10,7 +10,13 @@
 <body>
 	
 	<div>
-		<h1>Recipes</h1>
+		<h1>Recipes
+			<nav class="homeBar">
+				<ul>
+					<li class="home"><a href="file:///Users/katietaber/Sites/KathrynTaber/Final_Project/index.html">Home</a></li>
+				</ul>
+			</nav>
+		</h1>
 		<p id="quote">"Anything and everything is possible"</p>
 	</div>
 
