restaurants final project updated

--- a/Final_Project/restaurants/index.html
+++ b/Final_Project/restaurants/index.html
@@ -7,7 +7,34 @@
 	<link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
+
+	<h1>Restaurants
+		<nav class="homeBar">
+			<ul>
+				<li class="home"><a href="file:///Users/katietaber/Sites/KathrynTaber/Final_Project/index.html">Home</a></li>
+			</ul>
+		</nav>
+	</h1>
+	<div>
+		<p>"Vegan restaurants can be hard to find... My goal is to help everyone discover all the possibilities.. From quick bites, fancy eats, or sweets the options are endless!" </p>
+	</div>
 	
+
+	<div id="pictures">
+			<img id="image" src="images/rias.jpeg">
+			<div></div>
+			<div id="buttons-wrapper">
+				<form>
+					<input type="button" id="prevButton" class="btn" value="Back">
+					<input type="button" id="nextButton" class="btn" value="Next">
+					</form>
+			</div>
+	</div>
+
+	<div>
+		
+		
+	</div>
 
 
 
@@ -18,7 +45,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-	<script src="js/index.js"></script>
+	<script src="js/index5.js"></script>
 </body>
 
 
