restaurants final project

--- a/Final_Project/restaurants/index.html
+++ b/Final_Project/restaurants/index.html
@@ -32,7 +32,16 @@
 	</div>
 
 	<div>
-		
+		<ul id="places">
+			<li>Ria's Blue Bird</li>
+			<li>Soul Vegeterian</li>
+			<li>Herban Fix</li>
+			<li>Java Jive</li>
+			<li>Dulce Bakery</li>
+			<li>Revolution Donuts</li>
+
+
+		</ul>
 		
 	</div>
 
